--- a/SEREN AI/templates/dashboard.html
+++ b/SEREN AI/templates/dashboard.html
@@ -181,27 +181,27 @@
         <div class="card">
             <div class="icon">📅</div>
             <p>Study Planner</p>
-            <a href="study_planner.html" class="btn">Open</a>
+            <a href="{{ url_for('study_planner') }}" class = "btn">Open</a>
         </div>
         <div class="card">
             <div class="icon">🎥</div>
             <p>Video Recommendations</p>
-            <a href="video_reco.html" class="btn">Open</a>
+            <a href="{{ url_for('video_reco') }}" class="btn">Open</a>
         </div>
         <div class="card">
             <div class="icon">📄</div>
             <p>Notes & Summarization</p>
-            <a href="notes_summarization.html" class="btn">Open</a>
+            <a href="{{ url_for('notes') }}" class="btn">Open</a>
         </div>
         <div class="card">
             <div class="icon">📝</div>
             <p>Quizzes & AI Assistance</p>
-            <a href="quizzes.html" class="btn">Open</a>
+            <a href="{{ url_for('quizzes') }}" class="btn">Open</a>
         </div>
         <div class="card">
             <div class="icon">👤</div>
             <p>Profile & Settings</p>
-            <a href="user_profile.html" class="btn">Open</a>
+            <a href="{{ url_for('user_planner') }}" class="btn">Open</a>
         </div>
     </div>
 
